fix the spacing issue forcing a new page in chinese page

--- a/src/Resume/aboutme.css
+++ b/src/Resume/aboutme.css
@@ -31,3 +31,9 @@ h4, p {
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
+.ch .linebreak {
+  font-size: 1rem;
+  margin: 0px;
+  line-height: 10px;
+}
